maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:36: error: '=' expected but ',' found.
def positionSortie() :Int,Int ={
                         ^JediEscaper:44: error: illegal start of simple expression
def ecrire(x:Int,y:Int,i:Int) {
^